  BlockPermissionChecker::checkEmailPermissions instead.
* SpecialBlock::checkUnblockSelf has been deprecated. Please use
  BlockPermissionChecker::checkBlockPermissions instead.
* SpecialBlock::parseExpiryInput was deprecated - use
  BlockUser::parseExpiryInput instead.
* SpecialBlock::validateTarget has been deprecated, use BlockUtils instead.
* …

=== Other changes in 1.36 ===
* The 'tidy' key in ParserOptions (used in the parser cache) has been removed.
  It has had no effect since 1.35.
* A future release of MediaWiki will make {{=}} a built-in parser function,
  for use when automatically escaping the `=` character in template arguments.
  A tracking category and parser warning have been added to this release when
  {{=}} is used and it expands to something other than `=`.
* The implementation of TestFileReader::read has been changed to use
  Parsoid's parser test file parser.  This should be compatible with
  existing code, but it only supports version 2 of the test file
  specification and may be more strict when parsing invalid input,
  including duplicate tests.
* The SkinLessImportPaths attribute was added, allowing skins to add a
  directory to the import path for LESS stylesheets. Skins can use this
  to provide a custom version of mediawiki.skin.variables.less, setting
  skin-specific values for certain LESS variables.
* …

== Compatibility ==
MediaWiki 1.36 requires PHP 7.2.22 or later, and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* json
* mbstring
* xml

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.2 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except